--- a/src/userinterfaces/OrderUI.form
+++ b/src/userinterfaces/OrderUI.form
@@ -482,6 +482,9 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="jTableOrder">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Britannic Bold" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="0">
                 <Column editable="true" title="Item" type="java.lang.Object"/>
@@ -489,6 +492,7 @@
                 <Column editable="true" title="Cost" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="rowHeight" type="int" value="23"/>
           </Properties>
         </Component>
       </SubComponents>
